[package]
name = "usync"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
reqwest = { version = "0.12.14", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
w = { path = "../mw" }
serde = { version = "1.0.219", features = ["derive"] }
futures-util = "0.3.31"
actix-web = { version = "4.10.2", default-features = false, features = ["macros"] }
serde_json = "1.0.140"
tracing = "0.1.41"
dashmap = "6.1.0"
toml = "0.8.20"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
